[tool.poetry]
name = "poga"
version = "0.1.6"
description = "Python bindings for YogaLayout"
authors = ["dzhsurf <dzhsurf@gmail.com>"]
keywords = ["YogaLayout", "Yoga", "Poga"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/dzhsurf/poga"
repository = "https://github.com/dzhsurf/poga"
include = [ "LICENSE" ]
packages = [
	{ include = "poga", from = "src" }
]
exclude = [ "**/*.pyc", "**/*.hpp", "**/*.cpp" ]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
black = ">=22.8.0"
sphinx = ">=5.1.1"
pytest = ">=7.1.3"
pybind11 = ">=2.10.0"
piccolo-theme = ">=0.12.0"
myst_parser = ">=0.18.1"
line-profiler = ">=3.5.1"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

